Fix heading alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,7 +97,7 @@
 
 .submit {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .box {
@@ -120,6 +120,7 @@ h4,
   color: #06BCC1;
   font-weight: bold;
   text-align: center;
+  max-width: 80%;
 }
 
 .total-expenses {
@@ -229,7 +230,7 @@ h1, h2 {
   padding: 20px;
 }
 
-h2 {
+h2, h3 {
   text-align: center;
 }
 
